<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/summary_overall"
        android:icon="@drawable/overall"
        android:title="@string/overall" />

    <item
        android:id="@+id/summary_sales"
        android:icon="@drawable/sales"
        android:title="@string/sales" />

    <item
        android:id="@+id/summary_profit"
        android:icon="@drawable/profit"
        android:title="@string/profit" />

    <item
        android:id="@+id/navigation_best_sales"
        android:icon="@drawable/best_sales"
        android:title="@string/best_sales" />

    <item
        android:id="@+id/navigation_best_time"
        android:icon="@drawable/best_time"
        android:title="@string/best_time" />
    <item
        android:id="@+id/navigation_sales_volume"
        android:icon="@drawable/sales_volume"
        android:title="@string/sales_volume" />
    <item
        android:id="@+id/navigation_sales_report"
        android:icon="@drawable/sales_report"
        android:title="@string/sales_report" />

</menu>
