<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_stock"
        android:icon="@drawable/cart"
        android:title="@string/navigation_stock" />

    <item
        android:id="@+id/navigation_pay_bill"
        android:icon="@drawable/bill"
        android:title="@string/navigation_pay_bill" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/calculator"
        android:title="@string/navigation_home" />

    <item
        android:id="@+id/navigation_summary"
        android:icon="@drawable/summary"
        android:title="@string/navigation_summary" />

    <item
        android:id="@+id/navigation_faq"
        android:icon="@drawable/faq"
        android:title="@string/navigation_faq" />

</menu>
